--- a/elevatorMan/EvaluateView.xib
+++ b/elevatorMan/EvaluateView.xib
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="EvaluteView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="240"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="350"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="为维修工服务打分" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcQ-3m-jNw">
-                    <rect key="frame" x="113" y="16" width="150" height="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本次工作已经完成,希望您及时对我们的服务进行评价,您的评价使我们服务提升的标准" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcQ-3m-jNw">
+                    <rect key="frame" x="16" y="16" width="343" height="100"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="150" id="vDd-lJ-zwT"/>
+                        <constraint firstAttribute="height" constant="100" id="zeQ-Kx-br3"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您的宝贵意见" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3t-yG-4uB">
-                    <rect key="frame" x="113" y="92" width="150" height="21"/>
+                    <rect key="frame" x="113" y="175" width="150" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="AYD-PH-UR9"/>
                         <constraint firstAttribute="width" constant="150" id="IiF-oc-8L8"/>
@@ -34,14 +34,8 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jZW-8o-2D1">
-                    <rect key="frame" x="16" y="129" width="343" height="54"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Inq-lA-B7S">
-                    <rect key="frame" x="170" y="41" width="35" height="35"/>
+                    <rect key="frame" x="170" y="124" width="35" height="35"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="7R6-Nc-edQ"/>
                         <constraint firstAttribute="height" constant="35" id="uDX-HI-BjG"/>
@@ -49,7 +43,7 @@
                     <state key="normal" image="icon_star_normal.png"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ivq-O6-YG5">
-                    <rect key="frame" x="220" y="41" width="35" height="35"/>
+                    <rect key="frame" x="220" y="124" width="35" height="35"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="q4B-dm-eFg"/>
                         <constraint firstAttribute="height" constant="35" id="r36-KV-Tpj"/>
@@ -57,7 +51,7 @@
                     <state key="normal" image="icon_star_normal.png"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZ0-yV-6Uw">
-                    <rect key="frame" x="270" y="41" width="35" height="35"/>
+                    <rect key="frame" x="270" y="124" width="35" height="35"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="04L-Zc-ufU"/>
                         <constraint firstAttribute="height" constant="35" id="4Cf-uI-ci3"/>
@@ -65,7 +59,7 @@
                     <state key="normal" image="icon_star_normal.png"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="urf-x1-FeA">
-                    <rect key="frame" x="120" y="41" width="35" height="35"/>
+                    <rect key="frame" x="120" y="124" width="35" height="35"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="IlZ-sY-gVt"/>
                         <constraint firstAttribute="height" constant="35" id="XNh-oQ-N5W"/>
@@ -73,7 +67,7 @@
                     <state key="normal" image="icon_star_normal.png"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Xh-zv-lge">
-                    <rect key="frame" x="70" y="41" width="35" height="35"/>
+                    <rect key="frame" x="70" y="124" width="35" height="35"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="7ur-60-stl"/>
                         <constraint firstAttribute="width" constant="35" id="8rN-8a-2kF"/>
@@ -81,8 +75,8 @@
                     <state key="normal" image="icon_star_normal.png"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3r5-32-xxN">
-                    <rect key="frame" x="87.5" y="199" width="200" height="25"/>
-                    <color key="backgroundColor" red="0.0" green="0.60392156860000001" blue="0.39607843139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="88" y="309" width="200" height="25"/>
+                    <color key="backgroundColor" red="0.21176470589999999" green="0.69019607839999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="25" id="AAz-zt-lhA"/>
                         <constraint firstAttribute="width" constant="200" id="Sx3-bb-htq"/>
@@ -92,36 +86,44 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="CJV-dd-B4K">
+                    <rect key="frame" x="16" y="204" width="343" height="89"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Ivq-O6-YG5" firstAttribute="leading" secondItem="Inq-lA-B7S" secondAttribute="trailing" constant="15" id="2Fp-YL-gSR"/>
                 <constraint firstItem="Ivq-O6-YG5" firstAttribute="height" secondItem="0Xh-zv-lge" secondAttribute="height" id="3JN-Z8-si3"/>
                 <constraint firstItem="EZ0-yV-6Uw" firstAttribute="height" secondItem="0Xh-zv-lge" secondAttribute="height" id="54J-26-sOJ"/>
+                <constraint firstItem="CJV-dd-B4K" firstAttribute="top" secondItem="y3t-yG-4uB" secondAttribute="bottom" constant="8" id="5LU-Gc-xBe"/>
                 <constraint firstItem="EZ0-yV-6Uw" firstAttribute="leading" secondItem="Ivq-O6-YG5" secondAttribute="trailing" constant="15" id="5uR-kS-exn"/>
                 <constraint firstItem="BcQ-3m-jNw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="6Ri-Xm-Tmd"/>
+                <constraint firstItem="CJV-dd-B4K" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="9GD-WB-FmE"/>
+                <constraint firstItem="BcQ-3m-jNw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="C9a-H8-aK0"/>
                 <constraint firstItem="Ivq-O6-YG5" firstAttribute="width" secondItem="0Xh-zv-lge" secondAttribute="width" id="HH7-RA-P0M"/>
                 <constraint firstAttribute="bottom" secondItem="3r5-32-xxN" secondAttribute="bottom" constant="16" id="KLc-tc-FkZ"/>
                 <constraint firstItem="Inq-lA-B7S" firstAttribute="leading" secondItem="urf-x1-FeA" secondAttribute="trailing" constant="15" id="NJV-8p-8Bg"/>
                 <constraint firstItem="EZ0-yV-6Uw" firstAttribute="top" secondItem="0Xh-zv-lge" secondAttribute="top" id="O8g-6P-qE9"/>
-                <constraint firstAttribute="trailing" secondItem="jZW-8o-2D1" secondAttribute="trailing" constant="16" id="O9m-uG-yfy"/>
                 <constraint firstItem="3r5-32-xxN" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="QRo-yP-uXU"/>
                 <constraint firstItem="urf-x1-FeA" firstAttribute="height" secondItem="0Xh-zv-lge" secondAttribute="height" id="UCF-GT-PZA"/>
                 <constraint firstItem="Inq-lA-B7S" firstAttribute="top" secondItem="BcQ-3m-jNw" secondAttribute="bottom" constant="8" id="UT7-th-wtZ"/>
-                <constraint firstItem="jZW-8o-2D1" firstAttribute="top" secondItem="y3t-yG-4uB" secondAttribute="bottom" constant="16" id="Xtq-Wq-MQl"/>
                 <constraint firstItem="BcQ-3m-jNw" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="YRO-EB-kvs"/>
                 <constraint firstItem="Inq-lA-B7S" firstAttribute="top" secondItem="0Xh-zv-lge" secondAttribute="top" id="Ybi-iF-417"/>
                 <constraint firstItem="y3t-yG-4uB" firstAttribute="top" secondItem="Inq-lA-B7S" secondAttribute="bottom" constant="16" id="aDp-1J-n6A"/>
                 <constraint firstItem="Inq-lA-B7S" firstAttribute="height" secondItem="0Xh-zv-lge" secondAttribute="height" id="aRd-Ig-sbj"/>
+                <constraint firstAttribute="trailing" secondItem="CJV-dd-B4K" secondAttribute="trailing" constant="16" id="anu-HO-QTM"/>
                 <constraint firstItem="urf-x1-FeA" firstAttribute="top" secondItem="0Xh-zv-lge" secondAttribute="top" id="coG-CD-XNd"/>
-                <constraint firstItem="3r5-32-xxN" firstAttribute="top" secondItem="jZW-8o-2D1" secondAttribute="bottom" constant="16" id="iDt-en-dMI"/>
                 <constraint firstItem="Ivq-O6-YG5" firstAttribute="top" secondItem="0Xh-zv-lge" secondAttribute="top" id="iec-n5-nAM"/>
                 <constraint firstItem="Inq-lA-B7S" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="joW-CK-Kxt"/>
                 <constraint firstItem="urf-x1-FeA" firstAttribute="width" secondItem="0Xh-zv-lge" secondAttribute="width" id="kdU-Bd-LEN"/>
                 <constraint firstItem="urf-x1-FeA" firstAttribute="leading" secondItem="0Xh-zv-lge" secondAttribute="trailing" constant="15" id="lDn-Ia-vVt"/>
                 <constraint firstItem="Inq-lA-B7S" firstAttribute="width" secondItem="0Xh-zv-lge" secondAttribute="width" id="o8i-oS-J8t"/>
-                <constraint firstItem="jZW-8o-2D1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="pG3-4j-V6Q"/>
+                <constraint firstItem="3r5-32-xxN" firstAttribute="top" secondItem="CJV-dd-B4K" secondAttribute="bottom" constant="16" id="osD-mW-ujm"/>
                 <constraint firstItem="EZ0-yV-6Uw" firstAttribute="width" secondItem="0Xh-zv-lge" secondAttribute="width" id="qxs-eh-03B"/>
+                <constraint firstAttribute="trailing" secondItem="BcQ-3m-jNw" secondAttribute="trailing" constant="16" id="xj3-V6-p3A"/>
                 <constraint firstItem="y3t-yG-4uB" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="zd8-AI-sDV"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -135,7 +137,7 @@
                 <outlet property="btnStar4" destination="Ivq-O6-YG5" id="FcA-Zc-t2e"/>
                 <outlet property="btnStar5" destination="EZ0-yV-6Uw" id="isH-W6-UNs"/>
                 <outlet property="btnSubmit" destination="3r5-32-xxN" id="JBn-ta-cHj"/>
-                <outlet property="tfContent" destination="jZW-8o-2D1" id="BQx-c7-Xrk"/>
+                <outlet property="tvContent" destination="CJV-dd-B4K" id="LOl-s9-4h6"/>
             </connections>
             <point key="canvasLocation" x="19.5" y="-246"/>
         </view>
